001 - Ocultar Split Buttons with Icon y Brand Buttons

--- a/buttons.html
+++ b/buttons.html
@@ -435,7 +435,7 @@
                             </div>
 
                             <!-- Brand Buttons -->
-                            <div class="card shadow mb-4">
+                            <!-- <div class="card shadow mb-4">
                                 <div class="card-header py-3">
                                     <h6 class="m-0 font-weight-bold text-primary">Brand Buttons</h6>
                                 </div>
@@ -531,7 +531,7 @@
                                         <span class="text">Split Button Large</span>
                                     </a>
                                 </div>
-                            </div>
+                            </div> -->
 
                         </div>
 
